--- a/src/Panama/View/Title/TitleVersionRenameWindow.xaml
+++ b/src/Panama/View/Title/TitleVersionRenameWindow.xaml
@@ -1,33 +1,37 @@
-﻿<Window 
+﻿<tk:AppWindow 
     x:Class="Restless.Panama.View.TitleVersionRenameWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
-    Height="330" Width="1060" ShowInTaskbar="False" ResizeMode="NoResize"
-    WindowStartupLocation="CenterOwner">
+    xmlns:r="clr-namespace:Restless.Panama.Resources"
+    xmlns:vm="clr-namespace:Restless.Panama.ViewModel" 
+    d:DataContext="{d:DesignInstance Type=vm:TitleVersionRenameWindowViewModel}"
+    mc:Ignorable="d"
+    ResizeMode="NoResize"
+    Style="{StaticResource DefaultAppWindowStyle}"
+    Height="352" Width="852">
     
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="{StaticResource GridRowHeightTool}" />
-        </Grid.RowDefinitions>
-        <!-- Main data grid to display the tabular data  -->
-        <tk:DataGrid 
-            Grid.Column="0" Grid.Row="0" 
-            ItemsSource="{Binding Path=MainSource.View}"
+    <Grid
+        tk:Property.RowHeights="*,Auto">
+        
+        <DataGrid 
+            BorderThickness="0,0,0,1"
+            ItemsSource="{Binding ListView}"
             SelectedItem="{Binding SelectedItem}"
             tk:DataGridColumns.Columns="{Binding Columns}"/>
-        <StackPanel Grid.Column="0" Grid.Row="1" Style="{StaticResource StackPanelCommandHolder}">
-            <Button Command="{Binding Commands[Rename]}">Rename</Button>
-            <Button Command="{Binding CloseWindowCommand}">Close</Button>
-            <TextBlock Style="{StaticResource TextBlockError}" VerticalAlignment="Center" Text="{Binding OperationMessage}"/>
-        </StackPanel>
         
-        
-
+        <StatusBar Grid.Row="1">
+            <tk:IconButton
+                Icon="{StaticResource SquareSmallBlueIconKey}"
+                Content="{x:Static r:Strings.TextRename}"
+                Command="{Binding Commands[Rename]}"/>
+            
+            <TextBlock
+                Style="{StaticResource TextBlockError}"
+                Text="{Binding OperationMessage}"/>
+        </StatusBar>
 
     </Grid>
-</Window>
+</tk:AppWindow>
