Month/day control to set submission period

--- a/src/Panama.Controls/Themes/Generic.xaml
+++ b/src/Panama.Controls/Themes/Generic.xaml
@@ -8,6 +8,7 @@
         <ResourceDictionary Source="pack://application:,,,/Panama.Controls;component/Themes/Generic/TagSelectorControl.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/Panama.Controls;component/Themes/Generic/TagSelectorItem.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/Panama.Controls;component/Themes/Generic/SplitterGrid.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/Panama.Controls;component/Themes/Generic/MonthDaySelector.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
 </ResourceDictionary>
