--- a/src/Panama/Resources/Dictionary/Geometry.xaml
+++ b/src/Panama/Resources/Dictionary/Geometry.xaml
@@ -38,6 +38,7 @@
     <Geometry x:Key="FilterOffGeometryKey">M2.39 1.73L1.11 3L9 10.89V15.87C8.96 16.16 9.06 16.47 9.29 16.7L13.3 20.71C13.69 21.1 14.32 21.1 14.71 20.71C14.94 20.5 15.04 20.18 15 19.88V16.89L20.84 22.73L22.11 21.46L15 14.35V14.34L13 12.35L11 10.34L4.15 3.5L2.39 1.73M6.21 3L8.2 5H16.96L13.11 9.91L15 11.8V10.75L19.79 4.62C20.13 4.19 20.05 3.56 19.62 3.22C19.43 3.08 19.22 3 19 3H6.21M11 12.89L13 14.89V17.58L11 15.58V12.89Z</Geometry>
     <Geometry x:Key="NoteGeometryKey">M14,10H19.5L14,4.5V10M5,3H15L21,9V19A2,2 0 0,1 19,21H5C3.89,21 3,20.1 3,19V5C3,3.89 3.89,3 5,3M5,5V19H19V12H12V5H5Z</Geometry>
     <Geometry x:Key="LinkGeometryKey">M3 1C1.89 1 1 1.89 1 3V14C1 15.11 1.89 16 3 16H14C15.11 16 16 15.11 16 14V11H14V14H3V3H14V5H16V3C16 1.89 15.11 1 14 1M9 7C7.89 7 7 7.89 7 9V12H9V9H20V20H9V18H7V20C7 21.11 7.89 22 9 22H20C21.11 22 22 21.11 22 20V9C22 7.89 21.11 7 20 7H9</Geometry>
+    <Geometry x:Key="LockGeometryKey">M12,17C10.89,17 10,16.1 10,15C10,13.89 10.89,13 12,13A2,2 0 0,1 14,15A2,2 0 0,1 12,17M18,20V10H6V20H18M18,8A2,2 0 0,1 20,10V20A2,2 0 0,1 18,22H6C4.89,22 4,21.1 4,20V10C4,8.89 4.89,8 6,8H7V6A5,5 0 0,1 12,1A5,5 0 0,1 17,6V8H18M12,3A3,3 0 0,0 9,6V8H15V6A3,3 0 0,0 12,3</Geometry>
     <Geometry x:Key="PlusGeometryKey" >M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z</Geometry>
     <Geometry x:Key="PublisherGeometryKey">M5,4V6H19V4H5M5,14H9V20H15V14H19L12,7L5,14Z</Geometry>
     <Geometry x:Key="SaveGeometryKey">M1 7H3V21H17V23H3C1.9 23 1 22.11 1 21V7M19 1H7C5.89 1 5 1.9 5 3V17C5 18.1 5.89 19 7 19H21C22.1 19 23 18.1 23 17V5L19 1M21 17H7V3H18.17L21 5.83V17M14 10C12.34 10 11 11.34 11 13S12.34 16 14 16 17 14.66 17 13 15.66 10 14 10M8 4H17V8H8V4Z</Geometry>
@@ -78,6 +79,8 @@
     <Path x:Key="FilterIconKey" x:Shared="False" Style="{StaticResource MediumPathStyle}" Data="{StaticResource FilterGeometryKey}"/>
     <Path x:Key="FilterOffIconKey" x:Shared="False" Style="{StaticResource MediumPathStyle}" Data="{StaticResource FilterOffGeometryKey}"/>
     <Path x:Key="LinkIconKey" x:Shared="False" Style="{StaticResource MediumPathStyle}" Data="{StaticResource LinkGeometryKey}"/>
+    <Path x:Key="LockIconKey" x:Shared="False" Style="{StaticResource StandardPathStyle}" Data="{StaticResource LockGeometryKey}"/>
+    <Path x:Key="LockMediumIconKey" x:Shared="False" Style="{StaticResource MediumPathStyle}" Data="{StaticResource LockGeometryKey}"/>
     <Path x:Key="NoteIconKey" x:Shared="False" Style="{StaticResource MediumPathStyle}" Data="{StaticResource NoteGeometryKey}"/>
     <Path x:Key="PlusIconKey" x:Shared="False" Style="{StaticResource MediumPathStyle}" Data="{StaticResource PlusGeometryKey}"/>
     <Path x:Key="PublisherIconKey" x:Shared="False" Style="{StaticResource MediumPathStyle}" Data="{StaticResource PublisherGeometryKey}"/>
