--- a/src/Panama/App.xaml
+++ b/src/Panama/App.xaml
@@ -24,6 +24,7 @@
                 <ResourceDictionary Source="Resources/Dictionary/Window.xaml"/>
                 <ResourceDictionary Source="Resources/Dictionary/Images.xaml"/>
                 <ResourceDictionary Source="Resources/Dictionary/ToolTip.xaml"/>
+                <ResourceDictionary Source="Resources/Dictionary/DataTemplate.xaml"/>
                 <!--
                 <ResourceDictionary Source="Resources/Dictionary/Converters.xaml"/>
                 <ResourceDictionary Source="Resources/Dictionary/ItemsControl.xaml"/>                
