Style title confirmation data grid

--- a/src/Panama/Resources/Dictionary/Brush.xaml
+++ b/src/Panama/Resources/Dictionary/Brush.xaml
@@ -13,6 +13,7 @@
     <!-- Foreground -->
     <SolidColorBrush x:Key="DefaultForegroundBrush" Color="MediumBlue"/>
     <SolidColorBrush x:Key="DarkForegroundBrush" Color="DimGray"/>
+    <SolidColorBrush x:Key="BrightForegroundBrush" Color="Blue"/>
     <SolidColorBrush x:Key="LightForegroundBrush" Color="#AB000000"/>
     <SolidColorBrush x:Key="DefaultHeaderForegroundBrush" Color="#606060" />
     <SolidColorBrush x:Key="DisabledForegroundBrush" Color="#888" />
