--- a/src/Panama/Resources/Dictionary/DataGrid.xaml
+++ b/src/Panama/Resources/Dictionary/DataGrid.xaml
@@ -68,6 +68,17 @@
         </Style.Triggers>
     </Style>
 
+    <Style x:Key="TitleConfirmDataGridRowStyle" TargetType="DataGridRow">
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding Status}" Value="SamePublisher">
+                <Setter Property="Foreground" Value="{StaticResource BrightForegroundBrush}"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Status}" Value="Exclusive">
+                <Setter Property="Foreground" Value="{StaticResource AlertForegroundBrush}"/>
+            </DataTrigger>            
+        </Style.Triggers>
+    </Style>
+
     <Style x:Key="PublisherDataGridRowStyle" TargetType="DataGridRow">
         <Style.Triggers>
             <MultiDataTrigger>
