--- a/src/Panama/View/Other/AlertView.xaml
+++ b/src/Panama/View/Other/AlertView.xaml
@@ -3,43 +3,75 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
-    xmlns:view="clr-namespace:Restless.Panama.View"    
+    xmlns:con="clr-namespace:Restless.Panama.Controls;assembly=Panama.Controls"
+    xmlns:core="clr-namespace:Restless.Panama.Core"
+    xmlns:r="clr-namespace:Restless.Panama.Resources"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:vm="clr-namespace:Restless.Panama.ViewModel" 
+    d:DataContext="{d:DesignInstance Type=vm:AlertViewModel}"
     mc:Ignorable="d"
-    d:DesignWidth="860" d:DesignHeight="500">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1.5*" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="{StaticResource GridRowHeightTool}" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <!-- Controls specific to this view-->
-        <Grid Grid.Column="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <view:SimpleRowFilter Grid.Column="0" HorizontalAlignment="Left" />
-            <ItemsControl Grid.Column="1" HorizontalAlignment="Right" Style="{StaticResource ItemsControlMenu}" ItemsSource="{Binding Path=VisualCommands}"/>
-        </Grid>
-        
-        <!-- Main data grid to display the tabular data  -->
-        <Border Grid.Row="1" Grid.Column="0" Style="{StaticResource BorderEditContainerStyle}">
-            <DataGrid ItemsSource="{Binding Path=MainSource.View}" SelectedItem="{Binding SelectedItem}" tk:DataGridColumns.Columns="{Binding Columns}">
+    d:DesignWidth="300" d:DesignHeight="400">
+    <con:SplitterGrid
+        MinDetailWidth="{x:Static core:Config+Grid.MinAlertDetailWidth}"
+        MaxDetailWidth="{x:Static core:Config+Grid.MaxAlertDetailWidth}"
+        IsDetailExpanded="{Binding Config.AlertDetailExpanded}"
+        DetailWidth="{Binding Config.AlertDetailWidth}">
+
+        <con:SplitterGrid.HeaderLeft>
+            <StatusBar>
+                <TextBlock Text="{x:Static r:Strings.MenuItemAlerts}"/>
+                <!-- no filters for now -->
+            </StatusBar>
+        </con:SplitterGrid.HeaderLeft>
+
+        <con:SplitterGrid.HeaderRight>
+            <StatusBar>
+                <TextBlock
+                    Style="{StaticResource TitleDisplayTextBlockStyle}"
+                    Text="{Binding SelectedAlert.Title}"/>
+            </StatusBar>
+        </con:SplitterGrid.HeaderRight>
+
+        <con:SplitterGrid.ContentLeft>
+            <DataGrid 
+                ItemsSource="{Binding ListView}"
+                SelectedItem="{Binding SelectedItem}"
+                tk:DataGridColumns.Columns="{Binding Columns}">
+                
                 <DataGrid.ContextMenu>
                     <ContextMenu ItemsSource="{Binding MenuItems}"/>
                 </DataGrid.ContextMenu>
-            </DataGrid>
-        </Border>
-        
-        <!-- Nested editing control on the right -->
-        <Border Grid.Row="1" Grid.Column="1" Style="{StaticResource BorderEditContainerStyle}">
-            <view:AlertEdit Visibility="{Binding EditVisibility}"/>
-        </Border>
-    </Grid>
-    <!-- end main grid-->
+                
+            </DataGrid>            
+        </con:SplitterGrid.ContentLeft>
+
+        <con:SplitterGrid.ContentRight>
+            <StackPanel
+                Style="{StaticResource DataEntryPanelStyle}"
+                Visibility="{Binding EditVisibility}">
+
+                <TextBlock Text="{x:Static r:Strings.TextTitle}"/>
+                <TextBox Text="{Binding SelectedAlert.Title}"/>
+
+                <TextBlock Text="{x:Static r:Strings.TextUrl}"/>
+                <TextBox Text="{Binding SelectedAlert.Url}"/>
+
+                <TextBlock>
+                    <Run Text="{x:Static r:Strings.TextDate}"/>
+                    <Run
+                        Foreground="{StaticResource DarkAlertForegroundBrush}" 
+                        Text="{Binding SelectedAlert.DateLocal, Mode=OneWay}"/>
+                </TextBlock>
+
+                <tk:Calendar SelectedDateUtc="{Binding SelectedAlert.Date}"/>
+
+                <CheckBox
+                    IsChecked="{Binding SelectedAlert.Enabled}"
+                    Content="{x:Static r:Strings.TextEnabled}"/>
+
+            </StackPanel>
+        </con:SplitterGrid.ContentRight>
+
+    </con:SplitterGrid>
 </UserControl>
