Implement alert window
When the app starts, check to see if any alerts are ready. Show the alert window as needed

--- a/src/Panama/View/Other/AlertView.xaml
+++ b/src/Panama/View/Other/AlertView.xaml
@@ -34,7 +34,8 @@
         </con:SplitterGrid.HeaderRight>
 
         <con:SplitterGrid.ContentLeft>
-            <DataGrid 
+            <DataGrid
+                RowHeight="{Binding Config.DataGridRowHeight}"
                 ItemsSource="{Binding ListView}"
                 SelectedItem="{Binding SelectedItem}"
                 tk:DataGridColumns.Columns="{Binding Columns}">
