Update window layouts
Update various window layouts

--- a/src/Panama/View/Publisher/PublisherSelectWindow.xaml
+++ b/src/Panama/View/Publisher/PublisherSelectWindow.xaml
@@ -14,9 +14,7 @@
     Style="{StaticResource DefaultAppWindowStyle}"
     Height="680" Width="568">
     
-    <Grid 
-        Margin="{StaticResource DefaultPadding}"
-        tk:Property.RowHeights="Auto,*">
+    <Grid tk:Property.RowHeights="Auto,*">
 
         <StatusBar>
             <TextBlock Text="{x:Static r:Strings.TextPublisher}"/>
@@ -32,7 +30,7 @@
 
         <DataGrid
             Grid.Row="1"
-            Margin="0,5"
+            BorderThickness="0,1,0,0"
             RowHeight="{Binding Config.DataGridRowHeight}"
             ItemsSource="{Binding ListView}"
             SelectedItem="{Binding SelectedItem}"
