--- a/src/Panama/View/Title/TitleConfirmWindow.xaml
+++ b/src/Panama/View/Title/TitleConfirmWindow.xaml
@@ -14,11 +14,10 @@
     Style="{StaticResource DefaultAppWindowStyle}"
     Height="370" Width="860">
     
-    <Grid 
-        Margin="{StaticResource TightPadding}"
-        tk:Property.RowHeights="*,Auto">
+    <Grid tk:Property.RowHeights="*,Auto">
 
         <tk:DataGrid
+            BorderThickness="0,0,0,1"
             RowHeight="{Binding Config.DataGridRowHeight}"
             RowStyle="{StaticResource TitleConfirmDataGridRowStyle}"
             ItemsSource="{Binding ListView}"
@@ -27,7 +26,7 @@
 
         <StackPanel
             Grid.Row="1"
-            Margin="0,5,0,0"
+            Margin="0,5"
             Orientation="Horizontal"
             HorizontalAlignment="Center">
 
