--- a/src/Panama/View/Publisher/PublisherEditContainer.xaml
+++ b/src/Panama/View/Publisher/PublisherEditContainer.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl 
+﻿<Grid
     x:Class="Restless.Panama.View.PublisherEditContainer"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,44 +7,43 @@
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
     xmlns:vw="clr-namespace:Restless.Panama.View" 
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:PublisherViewModel}"
-    mc:Ignorable="d" 
+    mc:Ignorable="d"
+    tk:Property.RowHeights="Auto,*"
     d:DesignHeight="800" d:DesignWidth="330">
-    <Grid tk:Property.RowHeights="Auto,*">
-        <tk:RadioButtonPanel
-            DockPanel.Dock="Top"
-            Margin="0,0,0,8"
-            tk:Property.ColumnWidths="Auto,Auto,Auto,Auto,Auto,Auto"
-            SelectedValue="{Binding SelectedEditSection}">
+
+    <tk:RadioButtonPanel
+        Margin="0,0,0,8"
+        tk:Property.ColumnWidths="Auto,Auto,Auto,Auto,Auto,Auto"
+        SelectedValue="{Binding SelectedEditSection}">
             
-            <tk:RadioButton Grid.Column="0" Value="1" Content="Main"/>
-            <tk:RadioButton Grid.Column="1" Value="2" Content="Periods"/>
-            <tk:RadioButton Grid.Column="2" Value="3" Content="Submissions"/>
-            <!--<tk:RadioButton Grid.Column="3" Value="4" Content="Credentials"/>-->
-        </tk:RadioButtonPanel>
+        <tk:RadioButton Grid.Column="0" Value="1" Content="Main"/>
+        <tk:RadioButton Grid.Column="1" Value="2" Content="Periods"/>
+        <tk:RadioButton Grid.Column="2" Value="3" Content="Submissions"/>
+        <!--<tk:RadioButton Grid.Column="3" Value="4" Content="Credentials"/>-->
+    </tk:RadioButtonPanel>
 
-        <!-- Main publisher data -->
-        <vw:PublisherEditMain
-            Grid.Row="1"
-            tk:Property.IsLongVisible="{Binding SelectedEditSection}"
-            tk:Property.IsLongVisibleValue="1"/>
+    <!-- Main publisher data -->
+    <vw:PublisherEditMain
+        Grid.Row="1"
+        tk:Property.IsLongVisible="{Binding SelectedEditSection}"
+        tk:Property.IsLongVisibleValue="1"/>
         
-        <!-- Submission periods -->
-        <vw:PublisherEditPeriod
-            Grid.Row="1"
-            tk:Property.IsLongVisible="{Binding SelectedEditSection}"
-            tk:Property.IsLongVisibleValue="2"/>
+    <!-- Submission periods -->
+    <vw:PublisherEditPeriod
+        Grid.Row="1"
+        tk:Property.IsLongVisible="{Binding SelectedEditSection}"
+        tk:Property.IsLongVisibleValue="2"/>
         
-        <!-- Submissions -->
-        <vw:PublisherEditSubmission
-            Grid.Row="1"
-            tk:Property.IsLongVisible="{Binding SelectedEditSection}"
-            tk:Property.IsLongVisibleValue="3"/>
+    <!-- Submissions -->
+    <vw:PublisherEditSubmission
+        Grid.Row="1"
+        tk:Property.IsLongVisible="{Binding SelectedEditSection}"
+        tk:Property.IsLongVisibleValue="3"/>
 
-        <!-- Credentials -->
-        <!--<vw:PublisherEditCredential
-            Grid.Row="1"
-            tk:Property.IsLongVisible="{Binding SelectedEditSection}"
-            tk:Property.IsLongVisibleValue="4"/>-->
+    <!-- Credentials -->
+    <!--<vw:PublisherEditCredential
+        Grid.Row="1"
+        tk:Property.IsLongVisible="{Binding SelectedEditSection}"
+        tk:Property.IsLongVisibleValue="4"/>-->
 
-    </Grid>
-</UserControl>
+</Grid>
