--- a/src/Panama/View/Title/TitleEditContainer.xaml
+++ b/src/Panama/View/Title/TitleEditContainer.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl 
+﻿<Grid 
     x:Class="Restless.Panama.View.TitleEditContainer"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,60 +8,59 @@
     xmlns:vw="clr-namespace:Restless.Panama.View" 
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:TitleViewModel}"
     mc:Ignorable="d" 
+    tk:Property.RowHeights="Auto,*"
     d:DesignHeight="800" d:DesignWidth="330">
-    <DockPanel>
-        <tk:RadioButtonPanel
-            DockPanel.Dock="Top"
-            Margin="0,0,0,8"
-            tk:Property.ColumnWidths="Auto,Auto,Auto,Auto,Auto,Auto"
-            SelectedValue="{Binding SelectedEditSection}">
+
+    <tk:RadioButtonPanel
+        Margin="0,0,0,8"
+        tk:Property.ColumnWidths="Auto,Auto,Auto,Auto,Auto,Auto"
+        SelectedValue="{Binding SelectedEditSection}">
             
-            <tk:RadioButton Grid.Column="0" Value="1" Content="Main"/>
-            <tk:RadioButton Grid.Column="1" Value="2" Content="Tags"/>
-            <tk:RadioButton Grid.Column="2" Value="3" Content="Version"/>
-            <tk:RadioButton Grid.Column="3" Value="4" Content="Submission"/>
-            <tk:RadioButton Grid.Column="4" Value="5" Content="Published"/>
-            <tk:RadioButton Grid.Column="5" Value="6" Content="Preview"/>
-        </tk:RadioButtonPanel>
+        <tk:RadioButton Grid.Column="0" Value="1" Content="Main"/>
+        <tk:RadioButton Grid.Column="1" Value="2" Content="Tags"/>
+        <tk:RadioButton Grid.Column="2" Value="3" Content="Version"/>
+        <tk:RadioButton Grid.Column="3" Value="4" Content="Submission"/>
+        <tk:RadioButton Grid.Column="4" Value="5" Content="Published"/>
+        <tk:RadioButton Grid.Column="5" Value="6" Content="Preview"/>
+    </tk:RadioButtonPanel>
 
-        <!-- Main title data -->
-        <vw:TitleEditMain
-            DockPanel.Dock="Top"
-            tk:Property.IsLongVisible="{Binding SelectedEditSection}"
-            tk:Property.IsLongVisibleValue="1"/>
+    <!-- Main title data -->
+    <vw:TitleEditMain
+        Grid.Row="1"
+        tk:Property.IsLongVisible="{Binding SelectedEditSection}"
+        tk:Property.IsLongVisibleValue="1"/>
         
-        <!-- Tags -->
-        <vw:TitleEditTag
-            DockPanel.Dock="Top"
-            tk:Property.IsLongVisible="{Binding SelectedEditSection}"
-            tk:Property.IsLongVisibleValue="2"/>
+    <!-- Tags -->
+    <vw:TitleEditTag
+        Grid.Row="1"
+        tk:Property.IsLongVisible="{Binding SelectedEditSection}"
+        tk:Property.IsLongVisibleValue="2"/>
         
-        <!-- Versions -->
-        <vw:TitleEditVersion
-            DockPanel.Dock="Top"
-            tk:Property.IsLongVisible="{Binding SelectedEditSection}"
-            tk:Property.IsLongVisibleValue="3"/>
+    <!-- Versions -->
+    <vw:TitleEditVersion
+        Grid.Row="1"
+        tk:Property.IsLongVisible="{Binding SelectedEditSection}"
+        tk:Property.IsLongVisibleValue="3"/>
 
-        <!-- Submissions -->
-        <vw:TitleEditSubmission
-            DockPanel.Dock="Top"
-            tk:Property.IsLongVisible="{Binding SelectedEditSection}"
-            tk:Property.IsLongVisibleValue="4"/>
+    <!-- Submissions -->
+    <vw:TitleEditSubmission
+        Grid.Row="1"
+        tk:Property.IsLongVisible="{Binding SelectedEditSection}"
+        tk:Property.IsLongVisibleValue="4"/>
 
-        <!-- Published -->
-        <vw:TitleEditPublished
-            DockPanel.Dock="Top"
-            tk:Property.IsLongVisible="{Binding SelectedEditSection}"
-            tk:Property.IsLongVisibleValue="5"/>
+    <!-- Published -->
+    <vw:TitleEditPublished
+        Grid.Row="1"
+        tk:Property.IsLongVisible="{Binding SelectedEditSection}"
+        tk:Property.IsLongVisibleValue="5"/>
 
-        <!-- Preview -->
-        <vw:PreviewPanel
-            DockPanel.Dock="Top"
-            HeaderVisibility="Collapsed"
-            PreviewMode="{Binding PreviewMode}"
-            PreviewText="{Binding PreviewText}"
-            tk:Property.IsLongVisible="{Binding SelectedEditSection}"
-            tk:Property.IsLongVisibleValue="6"/>
-        
-    </DockPanel>
-</UserControl>
+    <!-- Preview -->
+    <vw:PreviewPanel
+        Grid.Row="1"
+        HeaderVisibility="Collapsed"
+        PreviewMode="{Binding PreviewMode}"
+        PreviewText="{Binding PreviewText}"
+        tk:Property.IsLongVisible="{Binding SelectedEditSection}"
+        tk:Property.IsLongVisibleValue="6"/>
+
+</Grid>
