--- a/src/Panama/View/Title/TitleEditSubmission.xaml
+++ b/src/Panama/View/Title/TitleEditSubmission.xaml
@@ -1,16 +1,24 @@
-﻿<StackPanel
+﻿<Grid
     x:Class="Restless.Panama.View.TitleEditSubmission"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
-    xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:TitleViewModel}"
-    mc:Ignorable="d" 
-    d:DesignHeight="450" d:DesignWidth="400"
-    Style="{StaticResource DataEntryPanelStyle}">
-    <!-- Title edit 4 (submissions) -->
-    <TextBlock Text="Submissions"/>
-    <Border Background="LightGray" Height="32"/>
+    xmlns:r="clr-namespace:Restless.Panama.Resources"
+    xmlns:vm="clr-namespace:Restless.Panama.ViewModel" 
+    d:DataContext="{d:DesignInstance Type=vm:TitleViewModel}"
+    mc:Ignorable="d"
+    tk:Property.RowHeights="*,*"
+    d:DesignHeight="450" d:DesignWidth="400">
 
-</StackPanel>
+    <DataGrid
+        ItemsSource="{Binding Submissions.ListView}"
+        SelectedItem="{Binding Submissions.SelectedItem}"
+        tk:DataGridColumns.Columns="{Binding Submissions.Columns}"
+        />
+    <TextBlock
+            Style="{StaticResource TextBlockZeroResultStyle}"
+            tk:Property.IsCollapsed="{Binding Submissions.HaveItems}"
+            Text="{x:Static r:Strings.TextNoTitleSubmissions}"/>
+</Grid>
