Updates to data grid column handling
The updated toolkit provides the ability to automatically track the sorted column and restore it.

--- a/src/Panama/View/Other/AlertView.xaml
+++ b/src/Panama/View/Other/AlertView.xaml
@@ -34,7 +34,7 @@
         </con:SplitterGrid.HeaderRight>
 
         <con:SplitterGrid.ContentLeft>
-            <DataGrid
+            <tk:DataGrid
                 RowHeight="{Binding Config.DataGridRowHeight}"
                 ItemsSource="{Binding ListView}"
                 SelectedItem="{Binding SelectedItem}"
@@ -44,7 +44,7 @@
                     <ContextMenu ItemsSource="{Binding MenuItems}"/>
                 </DataGrid.ContextMenu>
                 
-            </DataGrid>            
+            </tk:DataGrid>            
         </con:SplitterGrid.ContentLeft>
 
         <con:SplitterGrid.ContentRight>
