Updates to data grid column handling (base view models)
Continuing with updates that enable the data grid to return to its original sorting

--- a/src/Panama/View/Tool/TableView.xaml
+++ b/src/Panama/View/Tool/TableView.xaml
@@ -38,7 +38,7 @@
         </con:SplitterGrid.HeaderRight>
 
         <con:SplitterGrid.ContentLeft>
-            <DataGrid
+            <tk:DataGrid
                 ItemsSource="{Binding ListView}"
                 SelectedItem="{Binding SelectedItem}"
                 tk:DataGridColumns.Columns="{Binding Columns}"/>
