--- a/src/Panama/View/Other/AuthorView.xaml
+++ b/src/Panama/View/Other/AuthorView.xaml
@@ -33,7 +33,7 @@
         </con:SplitterGrid.HeaderRight>
 
         <con:SplitterGrid.ContentLeft>
-            <DataGrid
+            <tk:DataGrid
                 ItemsSource="{Binding ListView}"
                 SelectedItem="{Binding SelectedItem}"
                 tk:DataGridColumns.Columns="{Binding Columns}">
@@ -42,7 +42,7 @@
                     <ContextMenu ItemsSource="{Binding MenuItems}"/>
                 </DataGrid.ContextMenu>
 
-            </DataGrid>
+            </tk:DataGrid>
         </con:SplitterGrid.ContentLeft>
 
         <con:SplitterGrid.ContentRight>
