--- a/src/Panama/View/Other/CredentialView.xaml
+++ b/src/Panama/View/Other/CredentialView.xaml
@@ -35,7 +35,7 @@
         </con:SplitterGrid.HeaderRight>
 
         <con:SplitterGrid.ContentLeft>
-            <DataGrid
+            <tk:DataGrid
                 ItemsSource="{Binding ListView}"
                 SelectedItem="{Binding SelectedItem}"
                 tk:DataGridColumns.Columns="{Binding Columns}">
@@ -44,7 +44,7 @@
                     <ContextMenu ItemsSource="{Binding MenuItems}"/>
                 </DataGrid.ContextMenu>
                 
-            </DataGrid>
+            </tk:DataGrid>
         </con:SplitterGrid.ContentLeft>
 
         <con:SplitterGrid.ContentRight>
