--- a/src/Panama/View/Other/LinkView.xaml
+++ b/src/Panama/View/Other/LinkView.xaml
@@ -34,7 +34,7 @@
         </con:SplitterGrid.HeaderRight>
 
         <con:SplitterGrid.ContentLeft>
-            <DataGrid
+            <tk:DataGrid
                 RowHeight="{Binding Config.DataGridRowHeight}"
                 ItemsSource="{Binding ListView}"
                 SelectedItem="{Binding SelectedItem}"
@@ -48,7 +48,7 @@
                     <ContextMenu ItemsSource="{Binding MenuItems}"/>
                 </DataGrid.ContextMenu>
 
-            </DataGrid>
+            </tk:DataGrid>
         </con:SplitterGrid.ContentLeft>
 
         <con:SplitterGrid.ContentRight>
