Updates to data grid column handling (window view models)
Continuing with updates that enable the data grid to return to its original sorting

--- a/src/Panama/View/Other/AlertWindow.xaml
+++ b/src/Panama/View/Other/AlertWindow.xaml
@@ -24,7 +24,7 @@
             </Style>
         </Grid.Resources>
 
-        <DataGrid
+        <tk:DataGrid
             BorderThickness="0,0,0,1"
             RowHeight="{Binding Config.DataGridRowHeight}"
             ItemsSource="{Binding ListView}"
@@ -39,7 +39,7 @@
                 <ContextMenu ItemsSource="{Binding MenuItems}"/>
             </DataGrid.ContextMenu>
             
-        </DataGrid>
+        </tk:DataGrid>
 
         <StatusBar Grid.Row="1">
             <TextBlock Text="Postpone"/>
