--- a/src/Panama/View/Publisher/PublisherSelectWindow.xaml
+++ b/src/Panama/View/Publisher/PublisherSelectWindow.xaml
@@ -28,7 +28,7 @@
                 Command="{Binding Commands[Select]}"/>
         </StatusBar>
 
-        <DataGrid
+        <tk:DataGrid
             Grid.Row="1"
             BorderThickness="0,1,0,0"
             RowHeight="{Binding Config.DataGridRowHeight}"
