--- a/src/Panama/View/Submission/SubmissionEditMessage.xaml
+++ b/src/Panama/View/Submission/SubmissionEditMessage.xaml
@@ -11,7 +11,7 @@
     mc:Ignorable="d"
     d:DesignHeight="600" d:DesignWidth="400">
     <Grid tk:Property.RowHeights="200,*">
-        <DataGrid 
+        <tk:DataGrid 
             Style="{StaticResource DataGridEditLockedStyle}"
             ItemsSource="{Binding Messages.ListView}"
             SelectedItem="{Binding Messages.SelectedItem}"
@@ -25,7 +25,7 @@
                 <ContextMenu ItemsSource="{Binding Messages.MenuItems}"/>
             </DataGrid.ContextMenu>
 
-        </DataGrid>
+        </tk:DataGrid>
 
         <HeaderedContentControl
             Grid.Row="1"
