Implement data grid column order / sort
Implement the ability to change the column order / sort and restore them again when the app starts up again

--- a/src/Panama/View/Title/TitleView.xaml
+++ b/src/Panama/View/Title/TitleView.xaml
@@ -127,7 +127,8 @@
         </con:SplitterGrid.HeaderRight>
 
         <con:SplitterGrid.ContentLeft>
-            <tk:DataGrid 
+            <tk:DataGrid
+                CanUserReorderColumns="True"
                 RowHeight="{Binding Config.DataGridRowHeight}"
                 ItemsSource="{Binding ListView}"
                 SelectedItem="{Binding SelectedItem}"
